<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svAgregar_Cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estilo_4"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/llAgregar_Cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvAgregar_Cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agregarcliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvDatosPersonales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/datos_personales" />

        <LinearLayout
            android:id="@+id/llAgregar_Cliente_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <Spinner
                android:id="@+id/spnIdentificacion"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/estilo_1"
                android:entries="@array/identificacion" />

            <EditText
                android:id="@+id/edtRifCi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/estilo_2"
                android:ems="10"
                android:hint="@string/rifci"
                android:inputType="numberSigned|textNoSuggestions" />

        </LinearLayout>

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_2"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textNoSuggestions|textPersonName" />

        <LinearLayout
            android:id="@+id/llAgregar_Cliente_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <Spinner
                android:id="@+id/spnCodCelular"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/estilo_1"
                android:entries="@array/codigocelular" />

            <EditText
                android:id="@+id/edtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/estilo_2"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone|textNoSuggestions" />

        </LinearLayout>

        <EditText
            android:id="@+id/edtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_2"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textNoSuggestions" />

        <Spinner
            android:id="@+id/spnEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_1"
            android:entries="@array/estados"
            tools:listitem="@android:layout/simple_spinner_item" />

        <TextView
            android:id="@+id/tvDatosCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/datos_registro" />

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_2"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress|textNoSuggestions" />

        <EditText
            android:id="@+id/edtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_2"
            android:ems="10"
            android:hint="@string/clave"
            android:inputType="textNoSuggestions|textPassword" />

        <EditText
            android:id="@+id/edtRepiteClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/estilo_2"
            android:ems="10"
            android:hint="@string/rclave"
            android:inputType="textNoSuggestions|textPassword" />

        <Button
            android:id="@+id/btnAgregarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/estilo_1"
            android:text="@string/agregar" />

    </LinearLayout>

</ScrollView>