<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llAgregarReclamo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estilo_4" >

    <LinearLayout
        android:id="@+id/llReclamo_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvReclamo_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reclamos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/llReclamo_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spnUsuario"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/estilo_2"
                android:entries="@array/usuario" />

            <EditText
                android:id="@+id/edtNroGarantia_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilo_2"
                android:ems="10"
                android:hint="@string/nrogarantia"
                android:inputType="text|textNoSuggestions" >

                <requestFocus />

            </EditText>

            <EditText
                android:id="@+id/edtNroFactura_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilo_2"
                android:ems="10"
                android:hint="@string/nrofactura"
                android:inputType="numberSigned|textNoSuggestions" />

            <Spinner
                android:id="@+id/spnArtefacto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilo_1"
                android:entries="@array/artefacto" />

            <Spinner
                android:id="@+id/spnModelo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilo_1"
                android:entries="@array/modelo" />

            <EditText
                android:id="@+id/edtSerial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilo_2"
                android:ems="10"
                android:hint="@string/serial"
                android:inputType="text|textNoSuggestions" />

            <Spinner
                android:id="@+id/spnFalla"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilo_1"
                android:entries="@array/falla" />

            <EditText
                android:id="@+id/edtObservacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/estilo_2"
                android:ems="10"
                android:hint="@string/observacion"
                android:inputType="text|textNoSuggestions" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrarReclamo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/estilo_1"
            android:text="@string/registrar" />
    </LinearLayout>

</ScrollView>