<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMenuPpal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estilo_4"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu_ppal" >

    <LinearLayout
        android:id="@+id/llMenuppal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnClientes"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/cliente"
            android:contentDescription="@string/clientes"
            android:onClick="mabrirclientes" />

        <TextView
            android:id="@+id/tvClientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/clientes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/btnReportes"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/imgreporte"
            android:contentDescription="@string/reporte" />

        <TextView
            android:id="@+id/tvReportes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/reportes"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMenuppal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnReclamos"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/reclamo"
            android:contentDescription="@string/reclamos"
            android:onClick="mabrirreclamo" />

        <TextView
            android:id="@+id/tvReclamo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/reclamos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/btnSalir"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:background="@drawable/salir"
            android:contentDescription="@string/salir"
            android:onClick="cerrar" />

        <TextView
            android:id="@+id/tvSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/salir"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>