<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llCliente"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/estilo_4"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvReportes_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/clientes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<LinearLayout
	    android:id="@+id/llCliente_1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp" >

		<EditText
		    android:id="@+id/edtBusqueda"
		    android:layout_width="0dp"
		    android:layout_height="40dp"
		    android:layout_gravity="center"
		    android:layout_weight="1"
		    android:background="@drawable/estilo_2"
		    android:ems="10"
		    android:hint="@string/busqueda"
		    android:inputType="text|textNoSuggestions" />

		<ImageButton
		    android:id="@+id/btnAgregarCliente_1"
		    android:layout_width="50dp"
		    android:layout_height="40dp"
		    android:layout_gravity="center"
		    android:layout_marginLeft="5dp"
		    android:background="@drawable/estilo_1"
		    android:contentDescription="@string/agregarcliente"
		    android:onClick="magregarclientes"
		    android:src="@android:drawable/ic_menu_add" />

	</LinearLayout>

	<ListView
	    android:id="@+id/android:list"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="@drawable/estilo_2" >
	</ListView>

</LinearLayout>